--- a/app/design/frontend/Smartwave/porto/Smartwave_Porto/layout/default.xml
+++ b/app/design/frontend/Smartwave/porto/Smartwave_Porto/layout/default.xml
@@ -52,6 +52,22 @@
             <block class="Smartwave\Porto\Block\Template" name="footer_block" template="html/footer.phtml">
                 <block class="Magento\Store\Block\Switcher" name="footer.store_switcher" template="switch/stores.phtml"/>
                 <block class="Magento\Newsletter\Block\Subscribe" name="footer.newsletter" template="subscribe_footer.phtml"/>
+                <block class="Magento\ReCaptchaUi\Block\ReCaptcha"
+										 name="recaptcha-newsletter"
+										 after="-"
+										 template="Magento_ReCaptchaNewsletter::recaptcha_newsletter.phtml"
+										 ifconfig="recaptcha_frontend/type_for/newsletter">
+									<arguments>
+											<argument name="recaptcha_for" xsi:type="string">newsletter</argument>
+											<argument name="jsLayout" xsi:type="array">
+													<item name="components" xsi:type="array">
+															<item name="recaptcha" xsi:type="array">
+																	<item name="component" xsi:type="string">Magento_ReCaptchaFrontendUi/js/reCaptcha</item>
+															</item>
+													</item>
+											</argument>
+									</arguments>
+							</block>
             </block>
         </referenceContainer>
 
