--- a/pub/media/porto/configed_css/design_default.css
+++ b/pub/media/porto/configed_css/design_default.css
@@ -1,6 +1,6 @@
 /**
  * WARNING: Do not change this file. Your changes will be lost.
- * 2021-11-23 11:47:46 */
+ * 2021-12-14 06:08:44 */
 
 body {
         font-size: 14px;
@@ -70,20 +70,20 @@ button.action.primary:hover{
 #ln_slider_price.ui-slider-horizontal{background-color:#ff7272}
 #ln_slider_price .ui-slider-handle{background-color:#ff7272}
     .page-header.type1, .page-header.type23, .page-header,header.page-header.sticky-header .header-main {
-        background-color: #FFFFFF;
+        background-color: #000000;
     }
     @media (max-width: 767px){
       header.page-header.sticky-header .header-main {
-          background-color: #FFFFFF;
+          background-color: #000000;
       }
     }
     .page-header .header-main {
-        color: #222529;
+        color: #FFFFFF;
     }
     .page-header .header-main a, .page-header.type5 .search-area a.search-toggle-icon{
-        color: #222529;
+        color: #FFFFFF;
     }
-    .cart-design-2 .action.showcart .minicart-icon {border-color: #222529;}
+    .cart-design-2 .action.showcart .minicart-icon {border-color: #FFFFFF;}
     .page-header .panel.wrapper,.main-panel-top {
         background-color: #0188cc;
     }
@@ -91,13 +91,31 @@ button.action.primary:hover{
         color: #bde1f5;
     }
 @media (min-width: 992px){
+    .page-header.type1 .nav-sections,.page-header.type2 .nav-sections, .page-header .navigation > ul, .page-header.type16.sticky-header .navigation:not(.side-megamenu) > ul, .page-header.type18 .main-menu-wrap{
+        background-color: #000000;
+    }
+    .page-header.type16 .navigation:not(.side-megamenu) > ul {border-color: #000000;}
+}
+@media (min-width: 992px){
     .page-header .navigation li.level0,
     .page-header.type23 .navigation .level0 > .level-top {
-        color: #222529;
+        color: #FFFFFF;
     }
 }
 @media (min-width: 992px){
   .sw-megamenu.navigation.side-megamenu li.level0 {color: #555;}
+}
+@media (min-width: 992px){
+    .page-header.type1 .navigation li.level0.active, .page-header.type1 .navigation li.level0:hover,
+    .page-header .navigation li.level0.active, .page-header .navigation li.level0:hover,
+    .page-header.type23 .navigation .level0:hover > .level-top,
+    .page-header.type23 .navigation .level0.active > .level-top,
+    .page-header.type23 .navigation .level0.has-active > .level-top {
+        background-color: #000000;
+    }
+    .page-header.type19 .navigation:not(.side-megamenu) .level0 > .submenu {
+        border-color: #000000;
+    }
 }
 @media (min-width: 992px){
   .sw-megamenu.navigation.side-megamenu li.level0:hover,
@@ -113,10 +131,10 @@ button.action.primary:hover{
     .page-header .navigation li.level0:hover,
     .page-header.type23 .navigation .level0.active > .level-top,
     .page-header.type23 .navigation .level0.has-active > .level-top {
-        color: #222529;
+        color: #FFFFFF;
     }
     .page-header.type2 .navigation .level0 .level-top:before {
-        background-color: #222529;
+        background-color: #FFFFFF;
     }
 }
 @media (min-width: 992px){
